<resources>

	<string name="app_name">TionaByHajaRand</string>
	<string name="hello_world">Hello world!</string>
	<string name="menu_settings">Settings</string>
    <string name="fihirana">Fihirana</string>
    <string name="fihirana_fanampiny">Fihirana Fanampiny</string>
    <string name="antema">Antema</string>
    <string name="liturgique">Liturgique</string>
    <string name="chorale">Chorale</string>
    <string name="others">Autres</string>
    <string name="chorale_songs">Chants chorales</string>
    <string name="other_songs">Chants autre</string>
    <string name="cancel">Annuler</string>
    <string name="not_found">Chant non répertorié.</string>

</resources>