<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/choice_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#008AB5">

        <Button
            android:id="@+id/btn_fihirana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fihirana"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_fihirana_fanampiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fihirana_fanampiny"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_antema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antema"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_liturgique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liturgique"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_chorale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chorale"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/others"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#008AB5">
        <TextView
            android:id="@+id/search_type"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fihirana"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/nb_edit"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:inputType="number"
            android:layout_margin="5dp"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:id="@+id/btn_go"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/search_selector"
            android:scaleType="fitCenter"
            android:layout_margin="5dp"/>

    </LinearLayout>

    <com.joanzapata.pdfview.PDFView
        android:id="@+id/pdfview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>