<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <ImageView
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/layout_type_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title">

        <Button
            android:id="@+id/btn_fihirana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fihirana"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_fihirana_fanampiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fihirana_fanampiny"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_antema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/antema"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_liturgique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liturgique"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btn_chorale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chorale"
            android:layout_margin="5dp"/>

    </LinearLayout>

        <EditText
            android:id="@+id/number_param"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:layout_below="@+id/layout_type_search"/>

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/search_selector"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/number_param"
            android:layout_centerHorizontal="true"/>

    <ScrollView
        android:id="@+id/btn_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_search">



    </ScrollView>

</RelativeLayout>